fix z-index amount

--- a/packages/app/src/styles/_variables.scss
+++ b/packages/app/src/styles/_variables.scss
@@ -39,4 +39,4 @@ $grw-nav-main-tab-height: 42px;
 
 // slightly larger than $zindex-fixed
 // https://getbootstrap.jp/docs/4.5/layout/overview/#z-index
-$grw-navbar-z-index-amount: 1030;
+$grw-navbar-z-index-amount: 1035;
